--- a/01/index.html
+++ b/01/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     Pérola.
-    <a href="01">Atividade 01</a>
+    <a href="contato.html">Contato</a>
+    <a href="empresa.html">Empresa</a>
+    <a href="home.html">Home</a>
 </body>
 </html>
