--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     Pérola.
-    <a href="01">Atividade 01</a>
-    <a href="02">Atividade 02</a>
+    <a href="01">Atividade 01</a><br>
+    <a href="02">Atividade 02</a><br>
 </body>
 </html>
