--- a/02/index.html
+++ b/02/index.html
@@ -31,5 +31,8 @@
             <li>Item 2</li>
             <li>Item 3</li>
         </ol>
+        <br>
+        <hr>
+        <img height="20px" src="https://www.google.com/search?q=imagem+rosa&oq=imagem+rosa+&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBCDU5MDNqMGoxqAIAsAIA&sourceid=chrome&ie=UTF-8#vhid=Gw9Fu7fJd-SfmM&vssid=l">
     </body>
 </html>
