--- a/02/index.html
+++ b/02/index.html
@@ -33,6 +33,6 @@
         </ol>
         <br>
         <hr>
-        <img height="20px" src="https://www.google.com/search?q=imagem+rosa&oq=imagem+rosa+&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBCDU5MDNqMGoxqAIAsAIA&sourceid=chrome&ie=UTF-8#vhid=Gw9Fu7fJd-SfmM&vssid=l">
+        <img height="20px" width="20px" src="https://31114.cdn.simplo7.net/static/31114/sku/tactel-tactel-leve-rosa-pink--p-1611145644671.jpg">
     </body>
 </html>
