--- a/02/index.html
+++ b/02/index.html
@@ -33,6 +33,6 @@
         </ol>
         <br>
         <hr>
-        <img height="5px" width="5px" src="https://31114.cdn.simplo7.net/static/31114/sku/tactel-tactel-leve-rosa-pink--p-1611145644671.jpg">
+        <img height="5px" src="https://31114.cdn.simplo7.net/static/31114/sku/tactel-tactel-leve-rosa-pink--p-1611145644671.jpg">
     </body>
 </html>
