--- a/01/home.html
+++ b/01/home.html
@@ -1,1 +1,38 @@
-Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+POR AVICI!
+NUNCA VOU TE ESQUECER!
+
+Hey brother
+There's an endless road to rediscover
+Hey sister
+Know that water's sweet, but blood is thicker
+Oh, if the sky comes falling down
+For you
+There's nothing in this world I wouldn't do
+Hey brother
+Do you still believe in one another?
+Hey sister
+Do you still believe in love? I wonder
+Oh, if the sky comes falling down
+For you
+There's nothing in this world I wouldn't do
+What if I'm far from home?
+Oh brother, I will hear you call
+What if I lose it all?
+Oh sister, I will help you out
+Oh, if the sky comes falling down
+For you
+There's nothing in this world I wouldn't do
+Hey brother
+There's an endless road to rediscover
+Hey sister
+Do you still believe in love? I wonder
+Oh, if the sky comes falling down
+For you
+There's nothing in this world I wouldn't do
+What if I'm far from home?
+Oh brother, I will hear you call
+What if I lose it all?
+Oh sister, I will help you out
+Oh, if the sky comes falling down
+For you
+There's nothing in this world I wouldn't do
