--- a/01/empresa.html
+++ b/01/empresa.html
@@ -1,1 +1,44 @@
-Ao contrário do que se acredita, Lorem Ipsum não é simplesmente um texto randômico. Com mais de 2000 anos, suas raízes podem ser encontradas em uma obra de literatura latina clássica datada de 45 AC. Richard McClintock, um professor de latim do Hampden-Sydney College na Virginia, pesquisou uma das mais obscuras palavras em latim, consectetur, oriunda de uma passagem de Lorem Ipsum, e, procurando por entre citações da palavra na literatura clássica, descobriu a sua indubitável origem. Lorem Ipsum vem das seções 1.10.32 e 1.10.33 do "de Finibus Bonorum et Malorum" (Os Extremos do Bem e do Mal), de Cícero, escrito em 45 AC. Este livro é um tratado de teoria da ética muito popular na época da Renascença. A primeira linha de Lorem Ipsum, "Lorem Ipsum dolor sit amet..." vem de uma linha na seção 1.10.32.
+POR ALAN WALKER.
+
+You were the shadow to my light
+Did you feel us?
+Another star, you fade away
+Afraid our aim is out of sight
+Wanna see us alive
+
+Where are you now?
+Where are you now?
+Where are you now?
+Was it all in my fantasy?
+Where are you now?
+Were you only imaginary?
+
+Where are you now?
+Atlantis, under the sea, under the sea
+Where are you now? Another dream
+The monster's running wild inside of me
+
+I'm faded, I'm faded
+So lost, I'm faded, I'm faded
+So lost, I'm faded
+
+These shallow waters never met what I needed
+I'm letting go, a deeper dive
+Eternal silence of the sea
+I'm breathing, alive
+
+Where are you now?
+Where are you now?
+Under the bright but faded lights
+You set my heart on fire
+Where are you now?
+Where are you now?
+
+Where are you now?
+Atlantis, under the sea, under the sea
+Where are you now? Another dream
+The monster's running wild inside of me
+
+I'm faded, I'm faded
+So lost, I'm faded, I'm faded
+So lost, I'm faded
