--- a/01/contato.html
+++ b/01/contato.html
@@ -1,1 +1,53 @@
-É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível. Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).
+POR LEWIS CAPALDI.
+
+I'm going under and this time I fear there's no one to save me
+This all or nothing really got a way of driving me crazy
+I need somebody to heal
+Somebody to know
+Somebody to have
+Somebody to hold
+It's easy to say
+But it's never the same
+I guess I kinda liked the way you numbed all the pain
+Now the day bleeds
+Into nightfall
+And you're not here
+To get me through it all
+I let my guard down
+And then you pulled the rug
+I was getting kinda used to being someone you loved
+I'm going under and this time I fear there's no one to turn to
+This all or nothing way of loving got me sleeping without you
+Now, I need somebody to know
+Somebody to heal
+Somebody to have
+Just to know how it feels
+It's easy to say but it's never the same
+I guess I kinda liked the way you helped me escape
+Now the day bleeds
+Into nightfall
+And you're not here
+To get me through it all
+I let my guard down
+And then you pulled the rug
+I was getting kinda used to being someone you loved
+And I tend to close my eyes when it hurts sometimes
+I fall into your arms
+I'll be safe in your sound 'til I come back around
+For now the day bleeds
+Into nightfall
+And you're not here
+To get me through it all
+I let my guard down
+And then you pulled the rug
+I was getting kinda used to being someone you loved
+But now the day bleeds
+Into nightfall
+And you're not here
+To get me through it all
+I let my guard down
+And then you pulled the rug
+I was getting kinda used to being someone you loved
+I let my guard down
+And then you pulled the rug
+I was getting kinda used to being someone you loved
