--- a/01/home.html
+++ b/01/home.html
@@ -1,38 +1,38 @@
-POR AVICI!
-NUNCA VOU TE ESQUECER!
-
-Hey brother
-There's an endless road to rediscover
-Hey sister
-Know that water's sweet, but blood is thicker
-Oh, if the sky comes falling down
-For you
-There's nothing in this world I wouldn't do
-Hey brother
-Do you still believe in one another?
-Hey sister
-Do you still believe in love? I wonder
-Oh, if the sky comes falling down
-For you
-There's nothing in this world I wouldn't do
-What if I'm far from home?
-Oh brother, I will hear you call
-What if I lose it all?
-Oh sister, I will help you out
-Oh, if the sky comes falling down
-For you
-There's nothing in this world I wouldn't do
-Hey brother
-There's an endless road to rediscover
-Hey sister
-Do you still believe in love? I wonder
-Oh, if the sky comes falling down
-For you
-There's nothing in this world I wouldn't do
-What if I'm far from home?
-Oh brother, I will hear you call
-What if I lose it all?
-Oh sister, I will help you out
-Oh, if the sky comes falling down
-For you
-There's nothing in this world I wouldn't do
+POR AVICI!<br>
+NUNCA VOU TE ESQUECER!<br>
+<br>
+Hey brother<br>
+There's an endless road to rediscover<br>
+Hey sister<br>
+Know that water's sweet, but blood is thicker<br>
+Oh, if the sky comes falling down<br>
+For you<br>
+There's nothing in this world I wouldn't do<br>
+Hey brother<br>
+Do you still believe in one another?<br>
+Hey sister<br>
+Do you still believe in love? I wonder<br>
+Oh, if the sky comes falling down<br>
+For you<br>
+There's nothing in this world I wouldn't do<br>
+What if I'm far from home?<br>
+Oh brother, I will hear you call<br>
+What if I lose it all?<br>
+Oh sister, I will help you out<br>
+Oh, if the sky comes falling down<br>
+For you<br>
+There's nothing in this world I wouldn't do<br>
+Hey brother<br>
+There's an endless road to rediscover<br>
+Hey sister<br>
+Do you still believe in love? I wonder<br>
+Oh, if the sky comes falling down<br>
+For you<br>
+There's nothing in this world I wouldn't do<br>
+What if I'm far from home?<br>
+Oh brother, I will hear you call<br>
+What if I lose it all?<br>
+Oh sister, I will help you out<br>
+Oh, if the sky comes falling down<br>
+For you<br>
+There's nothing in this world I wouldn't do<br>
