--- a/01/contato.html
+++ b/01/contato.html
@@ -1,53 +1,53 @@
-POR LEWIS CAPALDI.
-
-I'm going under and this time I fear there's no one to save me
-This all or nothing really got a way of driving me crazy
-I need somebody to heal
-Somebody to know
-Somebody to have
-Somebody to hold
-It's easy to say
-But it's never the same
-I guess I kinda liked the way you numbed all the pain
-Now the day bleeds
-Into nightfall
-And you're not here
-To get me through it all
-I let my guard down
-And then you pulled the rug
-I was getting kinda used to being someone you loved
-I'm going under and this time I fear there's no one to turn to
-This all or nothing way of loving got me sleeping without you
-Now, I need somebody to know
-Somebody to heal
-Somebody to have
-Just to know how it feels
-It's easy to say but it's never the same
-I guess I kinda liked the way you helped me escape
-Now the day bleeds
-Into nightfall
-And you're not here
-To get me through it all
-I let my guard down
-And then you pulled the rug
-I was getting kinda used to being someone you loved
-And I tend to close my eyes when it hurts sometimes
-I fall into your arms
-I'll be safe in your sound 'til I come back around
-For now the day bleeds
-Into nightfall
-And you're not here
-To get me through it all
-I let my guard down
-And then you pulled the rug
-I was getting kinda used to being someone you loved
-But now the day bleeds
-Into nightfall
-And you're not here
-To get me through it all
-I let my guard down
-And then you pulled the rug
-I was getting kinda used to being someone you loved
-I let my guard down
-And then you pulled the rug
-I was getting kinda used to being someone you loved
+POR LEWIS CAPALDI.<br>
+<br>
+I'm going under and this time I fear there's no one to save me<br>
+This all or nothing really got a way of driving me crazy<br>
+I need somebody to heal<br>
+Somebody to know<br>
+Somebody to have<br>
+Somebody to hold<br>
+It's easy to say<br>
+But it's never the same<br>
+I guess I kinda liked the way you numbed all the pain<br>
+Now the day bleeds<br>
+Into nightfall<br>
+And you're not here<br>
+To get me through it all<br>
+I let my guard down<br>
+And then you pulled the rug<br>
+I was getting kinda used to being someone you loved<br>
+I'm going under and this time I fear there's no one to turn to<br>
+This all or nothing way of loving got me sleeping without you<br>
+Now, I need somebody to know<br>
+Somebody to heal<br>
+Somebody to have<br>
+Just to know how it feels<br>
+It's easy to say but it's never the same<br>
+I guess I kinda liked the way you helped me escape<br>
+Now the day bleeds<br>
+Into nightfall<br>
+And you're not here<br>
+To get me through it all<br>
+I let my guard down<br>
+And then you pulled the rug<br>
+I was getting kinda used to being someone you loved<br>
+And I tend to close my eyes when it hurts sometimes<br>
+I fall into your arms<br>
+I'll be safe in your sound 'til I come back around<br>
+For now the day bleeds<br>
+Into nightfall<br>
+And you're not here<br>
+To get me through it all<br>
+I let my guard down<br>
+And then you pulled the rug<br>
+I was getting kinda used to being someone you loved<br>
+But now the day bleeds<br>
+Into nightfall<br>
+And you're not here<br>
+To get me through it all<br>
+I let my guard down<br>
+And then you pulled the rug<br>
+I was getting kinda used to being someone you loved<br>
+I let my guard down<br>
+And then you pulled the rug<br>
+I was getting kinda used to being someone you loved<br>
