--- a/01/index.html
+++ b/01/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <h1>ATIVIDADE 01.</h1>
-    <h2>Pérola.</h2>
-    <a href="contato.html">Contato</a>
-    <a href="empresa.html">Empresa</a>
-    <a href="home.html">Home</a>
+    <h2><b>Pérola Pereira de Carvalho.</b></h2>
+    <a href="home.html">HOME</a>
+    <a href="empresa.html">EMPRESA</a>
+    <a href="contato.html">CONTATO</a>
 </body>
 </html>
