--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <h1>MEU PRIMEIRO SITE.</h1>
     <h2>PÉROLA PEREIRA DE CARVALHO</h2>
     <hr>
-    <a href="01">Atividade 01</a> - Links<br>
+    <a href="01">Atividade 01</a> - Links.<br>
     <a href="02">Atividade 02</a> - Mais Tags HTML.<br>
+    <a href="03">Atividade 03</a> - Tabelas HTML.<br>
 </body>
 </html>
