--- a/03/index.html
+++ b/03/index.html
@@ -66,17 +66,17 @@
         <h4><b>Desafio</b></h4>
         <table>
             <tr>
-                <td></td>
-                <td></td>
+                <td>.</td>
+                <td>.</td>
             </tr>
             <tr>
-                <td colspan="2"> </td>
+                <td colspan="2">.</td>
             </tr>
             <tr>
-                <td colspan="2"> </td>
+                <td colspan="2">.</td>
             </tr>
             <tr>
-                <td colspan="2"> </td>
+                <td colspan="2">.</td>
             </tr>
         </table>
     </body>
