--- a/03/index.html
+++ b/03/index.html
@@ -64,19 +64,19 @@
         <hr>
         <br>
         <h4><b>Desafio</b></h4>
-        <table>
+        <table border="2">
             <tr>
-                <td>.</td>
-                <td>.</td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
-                <td colspan="2">.</td>
+                <td colspan="2"></td>
             </tr>
             <tr>
-                <td colspan="2">.</td>
+                <td colspan="2"></td>
             </tr>
             <tr>
-                <td colspan="2">.</td>
+                <td colspan="2"></td>
             </tr>
         </table>
     </body>
