--- a/03/index.html
+++ b/03/index.html
@@ -64,7 +64,7 @@
         <hr>
         <br>
         <h4><b>Desafio</b></h4>
-        <table border="1" cellpadding="10" cellspacing="5" bgcolor="#F5F5F5" width="70%">
+        <table border="1" cellpadding="10" cellspacing="5" bgcolor="#f5f5f5" width="70%">
             <tr>
                 <td></td>
                 <td></td>
