--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Pérola Pereira de Carvalho.</title>
 </head>
-<body>
+<body bgcolor="#ffb6c1">
     <h1>MEU PRIMEIRO SITE.</h1>
     <h2>PÉROLA PEREIRA DE CARVALHO</h2>
     <hr>
