--- a/03/index.html
+++ b/03/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Atividade 03</title>
     </head>
-    <body>
+    <body bgcolor="#c8a2c8">
         <h1>ATIVIDADE 03.</h1>
         <br>
         <h2>TABELAS HTML</h2>
@@ -64,7 +64,7 @@
         <hr>
         <br>
         <h4><b>Desafio</b></h4>
-        <table border="1" cellpadding="10" cellspacing="5" bgcolor="#ffb6c1" width="70%">
+        <table border="1" cellpadding="10" cellspacing="5" bgcolor="#F5F5F5" width="70%">
             <tr>
                 <td></td>
                 <td></td>
