--- a/01/index.html
+++ b/01/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Pérola Pereira de Carvalho.</title>
 </head>
-<body>
+<body bgcolor="#c8a2c8">
     <h1>ATIVIDADE 01.</h1>
     <h2><b>Pérola Pereira de Carvalho.</b></h2>
     <a href="home.html">HOME</a>
