--- a/02/index.html
+++ b/02/index.html
@@ -5,7 +5,7 @@
             ATIVIDADE 02.
         </title>
     </head>
-    <body>
+    <body bgcolor="#c8a2c8">
         <h1> ATIVIDADE 02.</h1>
         <br>
         <hr>
