--- a/03/index.html
+++ b/03/index.html
@@ -66,14 +66,14 @@
         <h4><b>Desafio</b></h4>
         <table border="1" cellpadding="10" cellspacing="5" bgcolor="#F5F5F5" width="70%">
             <tr>
-                <td></td>
+                <td bgcolor="#add8e6"></td>
                 <td></td>
             </tr>
             <tr>
                 <td colspan="2"></td>
             </tr>
             <tr>
-                <td colspan="2"></td>
+                <td colspan="2" bgcolor="#daa520"></td>
             </tr>
             <tr>
                 <td colspan="2"></td>
