--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <h1>MEU PRIMEIRO SITE.</h1>
     <h2>PÉROLA PEREIRA DE CARVALHO</h2>
     <hr>
-    <a href="01">Atividade 01</a> - Links.<br>
-    <a href="02">Atividade 02</a> - Mais Tags HTML.<br>
-    <a href="03">Atividade 03</a> - Tabelas HTML.<br>
+    <br>
+    <table border="2" cellspacing="10" cellpadding="5" bgcolor="#add8e6">
+        <tr colspan="2">
+            <td><a href="01">Atividade 01</a> - Links</td>
+        </tr>
+        <tr colspan="2">
+            <td><a href="02">Atividade 02</a> - Mais Tags HTML</td>
+        </tr>
+        <tr colspan="2">
+            <td> <a href="03">Atividade 03</a> - Tabelas HTML</td>
+        </tr>
+    </table>
 </body>
 </html>
