--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h2>PÉROLA PEREIRA DE CARVALHO</h2>
     <hr>
     <br>
-    <table border="2" cellspacing="10" cellpadding="5" bgcolor="#add8e6">
+    <table border="2" cellspacing="10" cellpadding="5" bgcolor="#add8e6" width="70%">
         <tr colspan="2">
             <td><a href="01">Atividade 01</a> - Links</td>
         </tr>
