--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <tr>
             <td> <a href="03">Atividade 03</a> - Tabelas HTML</td>
         </tr>
+        <tr>
+            <td> <a href="04">Atividade 04</a> - Formulários HTML</td>
+        </tr>
     </table>
 </body>
 </html>
