--- a/04/index.html
+++ b/04/index.html
@@ -7,7 +7,7 @@
         <h1>Formulários</h1>
         <br>
         <hr>
-        <form>
+        <form pgcolor="#9400D3">
             Login:<br>
             <input type="text" name="Login"><br>
             Senha:<br>
