--- a/04/cadastro.html
+++ b/04/cadastro.html
@@ -7,7 +7,7 @@
         <h1>Cadastre-se</h1>
         <hr>
         <br>
-        <form>
+        <form pgcolor="#9932CC">
             Login:<br>
             <input type="text" name="Login"><br>
             Senha:<br>
