--- a/04/cadastro.html
+++ b/04/cadastro.html
@@ -7,7 +7,7 @@
         <h1>Cadastre-se</h1>
         <hr>
         <br>
-        <form pgcolor="#9932CC">
+        <form action="http://191.252..62.149:8080/pweb/salvar.jsp" method="get">
             Login:<br>
             <input type="text" name="Login"><br>
             Senha:<br>
@@ -43,7 +43,7 @@
 
             </textarea><br>
             <br><br>
-            <input type="button" value="Enviar">
+            <input type="submit" value="Enviar">
         </form>
     </body>
 </html>
