--- a/04/cadastro.html
+++ b/04/cadastro.html
@@ -9,29 +9,29 @@
         <br>
         <form action="http://191.252.62.149:8080/pweb/salvar.jsp" method="get">
             Login:<br>
-            <input type="text" name="Login"><br>
+            <input type="text" name="login"><br>
             Senha:<br>
-            <input type="password" name="Senha"><br>
+            <input type="password" name="senha"><br>
             Confirme a Senha:<br>
-            <input type="password" name="ConfimaSenha"><br>
+            <input type="password" name="confimaSenha"><br>
             <br>
             Nome:<br>
-            <input type="text" name="Nome"><br>
+            <input type="text" name="nome"><br>
                 Sexo:<br>
-            <input type="radio" name="Sexo">Feminino<br>
-            <input type="radio" name="Sexo">Masculino<br>
+            <input type="radio" name="sexo">Feminino<br>
+            <input type="radio" name="sexo">Masculino<br>
             Email:<br>
-            <input type="email" name="Email"><br>
+            <input type="email" name="email"><br>
             Interesses:<br>
-            <input type="checkbox" name="Interesses">Futebol<br>
-            <input type="checkbox" name="Interesses">Polítiva<br>
-            <input type="checkbox" name="Interesses">Economia<br>
-            <input type="checkbox" name="Interesses">Carros<br>
-            <input type="checkbox" name="Interesses">Celebridades<br>
+            <input type="checkbox" name="interesses">Futebol<br>
+            <input type="checkbox" name="interesses">Polítiva<br>
+            <input type="checkbox" name="interesses">Economia<br>
+            <input type="checkbox" name="interesses">Carros<br>
+            <input type="checkbox" name="interesses">Celebridades<br>
             <br>
             Estado:<br>
-            <select name="Estado" id="Estado">
-                <option label="Selecione Estado:"></option>
+            <select name="estado" id="Estado">
+                <option label="selecione Estado:"></option>
                 <option value="PI">Piauí</option>
                 <option value="MA">Maranhão</option>
                 <option value="AC">Acre</option>
@@ -43,7 +43,7 @@
 
             </textarea><br>
             <br><br>
-            <input type="submit" value="Enviar">
+            <input type="submit" value="enviar">
         </form>
     </body>
 </html>
