--- a/04/cadastro.html
+++ b/04/cadastro.html
@@ -18,16 +18,16 @@
             Nome:<br>
             <input type="text" name="nome"><br>
             Sexo:<br>
-            <input type="radio" name="sexo">Feminino<br>
-            <input type="radio" name="sexo">Masculino<br>
+            <input type="radio" value="Feminino" name="sexo">Feminino<br>
+            <input type="radio" value="Masculino" name="sexo">Masculino<br>
             Email:<br>
             <input type="email" name="email"><br>
             Interesses:<br>
-            <input type="checkbox" name="interesses">Futebol<br>
-            <input type="checkbox" name="interesses">Polítiva<br>
-            <input type="checkbox" name="interesses">Economia<br>
-            <input type="checkbox" name="interesses">Carros<br>
-            <input type="checkbox" name="interesses">Celebridades<br>
+            <input type="checkbox" value="Futebol" name="interesses">Futebol<br>
+            <input type="checkbox" value="Política" name="interesses">Polítiva<br>
+            <input type="checkbox" value="Economia" name="interesses">Economia<br>
+            <input type="checkbox" value="Carros" name="interesses">Carros<br>
+            <input type="checkbox" value="Celebridades" name="interesses">Celebridades<br>
             <br>
             Estado:<br>
             <select name="estado" id="Estado">
