--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -4,7 +4,7 @@
         <title>JM Viajens - Página Inicial</title>
         <meta charset="utf-8">  
     </head>
-    <body>
+    <body bgcolor="#c8a2c8">
         <h1 align="center">JM Viajens - Página Inicial</h1>
         <table border="0" width="900" align="center">
             <tr>
