--- a/Projeto/contato.html
+++ b/Projeto/contato.html
@@ -4,7 +4,7 @@
         <title>Contatos</title>
         <meta charset="utf-8">  
     </head>
-    <body>
+    <body bgcolor="#c8a2c8">
         <table border="0" width="900" align="center">
             <tr>
                 <td><img src="imagens/logo.png"></td>
