--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Pérola Pereira de Carvalho.</title>
 </head>
 <body bgcolor="#ffb6c1">
-    <h1>MEU PRIMEIRO SITE.</h1>
-    <h2>PÉROLA PEREIRA DE CARVALHO</h2>
+    <h1 align="center">MEU PRIMEIRO SITE.</h1>
+    <h2 align="center">PÉROLA PEREIRA DE CARVALHO</h2>
     <hr>
     <br>
-    <table border="2" cellspacing="10" cellpadding="5" bgcolor="#add8e6" width="50%">
+    <table border="2" cellspacing="10" cellpadding="5" bgcolor="#add8e6" width="50%" align="center">
         <tr>
             <td><a href="01">Atividade 01</a> - Links</td>
         </tr>
