--- a/05/index.html
+++ b/05/index.html
@@ -4,7 +4,7 @@
         <title>CSS Inline</title>
         <meta charset="utf-8" >
     </head>
-    <body>
+    <body pgcolor="#9400D3">
         <h1>Exemplos de CSS</h1>
         <h2>CSS Inline e incorporados</h2>
         <br><br>
