--- a/04/index.html
+++ b/04/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Atividade 04</title>
     </head>
-    <body pgcolor="#9400D3">
+    <body bgcolor="#c8a2c8">
         <h1>Formulários</h1>
         <br>
         <hr>
