--- a/04/cadastro.html
+++ b/04/cadastro.html
@@ -3,7 +3,7 @@
     <head>
         <title>Atividade 04</title>
     </head>
-    <body pgcolor="#9932CC">
+    <body bgcolor="#c8a2c8">
         <h1>Cadastre-se</h1>
         <hr>
         <br>
