--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <tr>
             <td> <a href="Trabalho">Trabalho</a> - Primeiro Site com CSS</td>
         </tr>
+        <tr>
+            <td> <a href="06">Atividade 06</a> - Tag !<div>!</td>
+        </tr>
     </table>
 </body>
 </html>
