--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <td> <a href="Trabalho">Trabalho</a> - Primeiro Site com CSS</td>
         </tr>
         <tr>
-            <td> <a href="06">Atividade 06</a> - Tag !<div>!</td>
+            <td> <a href="06">Atividade 06</a> - Tag DIV</td>
         </tr>
     </table>
 </body>
