--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h2 align="center">PÉROLA PEREIRA DE CARVALHO</h2>
     <hr>
     <br>
-    <table border="2" cellspacing="10" cellpadding="5" bgcolor="#add8e6" width="50%" align="center">
+    <table border="2" cellspacing="10" cellpadding="5" bgcolor="#add8e6" width="30%" align="center">
         <tr>
             <td><a href="01">Atividade 01</a> - Links</td>
         </tr>
@@ -32,6 +32,9 @@
         </tr>
         <tr>
             <td> <a href="06">Atividade 06</a> - Tag DIV</td>
+        </tr>
+        <tr>
+            <td> <a href="Desafio">Desafio</a> - Primeira Página usando DIV</td>
         </tr>
     </table>
 </body>
