--- a/Trabalho/index.html
+++ b/Trabalho/index.html
@@ -7,11 +7,11 @@
 
     <body>
         <!--Menu de navegação do site-->
-        <ul class="ul">
-            <il class="li"><a class="a" href="minhaprimeirapagina.html">Página Inicial</a><br></il>
-            <il class="li"><a class="a" href="pensamentos.html">Pensamentos</a><br></il>
-            <il class="li"><a class="a" href="cidade.html">Minha Cidade</a><br></il>
-            <il class="li"><a class="a" href="links.html">Links</a><br></il>
+        <ul class="navbar">
+            <il class="navbar li"><a class="navbar a" href="minhaprimeirapagina.html">Página Inicial</a><br></il>
+            <il class="navbar li"><a class="navbar a" href="pensamentos.html">Pensamentos</a><br></il>
+            <il class="navbar li"><a class="navbar a" href="cidade.html">Minha Cidade</a><br></il>
+            <il class="navbar li"><a class="navbar a" href="links.html">Links</a><br></il>
         </ul>
 
         <!--Conteúdo-->
