--- a/Trabalho/index.html
+++ b/Trabalho/index.html
@@ -17,7 +17,8 @@
         <!--Conteúdo-->
         <h1>Minha primeira página CSS</h1>
         <p>Bem Vindos(as) a minha página estilizada!</p>
-
+        <br>
+        <p>Meu nome é Pérola, tenho 16 anos. E atualmente moro em Teresina-PI.</p>
         <br><br>
         <address>Construída em 19/07/2024 por: <b style="color:black">Pérola Pereira de Carvalho</b>; aluna do 2º ano de Informática: <b style="color:black">IFPI Campos Teresina Zona Sul</b>.</address>
     </body>
