--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <tr>
             <td> <a href="Desafio">Desafio</a> - Primeira Página usando DIV</td>
         </tr>
+        <tr>
+            <td> <a href="07">Atividade 07</a> - Familias das Fontes</td>
+        </tr>
     </table>
 </body>
 </html>
