--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Pérola Pereira de Carvalho.</title>
 </head>
-<body bgcolor="#ffb6c1">
+<body <img src="pretty-sakura-forest-3u42gorbq3ad0oxs.jpg">>
     <h1 align="center">MEU PRIMEIRO SITE.</h1>
     <h2 align="center">PÉROLA PEREIRA DE CARVALHO</h2>
     <hr>
