--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <tr>
             <td> <a href="07">Atividade 07</a> - Familias das Fontes</td>
         </tr>
+        <tr>
+            <td> <a href="08">Atividade 08</a> - Box Model</td>
+        </tr>
     </table>
 </body>
 </html>
