--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
     <title>Pérola Pereira de Carvalho.</title>
+    <style>
+        body{
+            background-image: url('fundo.jpg');
+        }
+    </style>
 </head>
-<body bgcolor="#ffcbdb">
+<body>
     <h1 align="center">MEU PRIMEIRO SITE.</h1>
     <h2 align="center">PÉROLA PEREIRA DE CARVALHO</h2>
     <hr>
