--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <style>
         body{
             background-image: url('fundo.jpg');
+            background-repeat: no-repeat;
         }
     </style>
 </head>
