--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body{
             background-image: url('fundo.jpg');
-            background-repeat: no-repeat;
+            background-repeat: no-repeat y;
         }
     </style>
 </head>
