--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         body{
             background-image: url('fundo.jpg');
             background-repeat: no-repeat y;
+            background-repeat: no-repeat x;
         }
     </style>
 </head>
