--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         body{
             background-image: url('fundo.jpg');
         }
+        table {
+            background-color: coral;
+        }
     </style>
 </head>
 <body>
@@ -13,7 +16,7 @@
     <h2 align="center">PÉROLA PEREIRA DE CARVALHO</h2>
     <hr>
     <br>
-    <table border="2" cellspacing="10" cellpadding="5" bgcolor="#add8e6" width="30%" align="center">
+    <table border="2" cellspacing="10" cellpadding="5" width="30%" align="center">
         <tr>
             <td><a href="01">Atividade 01</a> - Links</td>
         </tr>
