--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             background-image: url('fundo.jpg');
         }
         table {
-            background-color: coral;
+            background-color: "#00FF00";
         }
     </style>
 </head>
