--- a/index.html
+++ b/index.html
@@ -21,31 +21,34 @@
             <td><a href="02">Atividade 02</a> - Mais Tags HTML</td>
         </tr>
         <tr>
-            <td> <a href="03">Atividade 03</a> - Tabelas HTML</td>
+            <td><a href="03">Atividade 03</a> - Tabelas HTML</td>
         </tr>
         <tr>
-            <td> <a href="04">Atividade 04</a> - Formulários HTML</td>
+            <td><a href="04">Atividade 04</a> - Formulários HTML</td>
         </tr>
         <tr>
-            <td> <a href="Projeto">Projeto</a> - Site JV Viajens</td>
+            <td><a href="Projeto">Projeto</a> - Site JV Viajens</td>
         </tr>
         <tr>
-            <td> <a href="05">Atividade 05</a> - CSS</td>
+            <td><a href="05">Atividade 05</a> - CSS</td>
         </tr>
         <tr>
-            <td> <a href="Trabalho">Trabalho</a> - Primeiro Site com CSS</td>
+            <td><a href="Trabalho">Trabalho</a> - Primeiro Site com CSS</td>
         </tr>
         <tr>
-            <td> <a href="06">Atividade 06</a> - Tag DIV</td>
+            <td><a href="06">Atividade 06</a> - Tag DIV</td>
         </tr>
         <tr>
-            <td> <a href="Desafio">Desafio</a> - Primeira Página usando DIV</td>
+            <td><a href="Desafio">Desafio</a> - Primeira Página usando DIV</td>
         </tr>
         <tr>
-            <td> <a href="07">Atividade 07</a> - Familias das Fontes</td>
+            <td><a href="07">Atividade 07</a> - Familias das Fontes</td>
         </tr>
         <tr>
-            <td> <a href="08">Atividade 08</a> - Box Model</td>
+            <td><a href="08">Atividade 08</a> - Box Model</td>
+        </tr>
+        <tr>
+            <td><a href="Galeria de Fotos">Trabalho</a> - Galeria de Fotos</td>
         </tr>
     </table>
 </body>
