--- a/Trabalho/index.html
+++ b/Trabalho/index.html
@@ -8,10 +8,10 @@
     <body>
         <!--Menu de navegação do site-->
         <ul class="lista">
-            <li><a class="a" href="minhaprimeirapagina.html">Página Inicial</a><br></li>
-            <li><a class="a" href="pensamentos.html">Pensamentos</a><br></li>
-            <li><a class="a" href="cidade.html">Minha Cidade</a><br></li>
-            <li><a class="a" href="links.html">Links</a><br></li>
+            <li><a href="minhaprimeirapagina.html">Página Inicial</a><br></li>
+            <li><a href="pensamentos.html">Pensamentos</a><br></li>
+            <li><a href="cidade.html">Minha Cidade</a><br></li>
+            <li><a href="links.html">Links</a><br></li>
         </ul>
 
         <!--Conteúdo-->
