--- a/Galeria de Fotos/index.html
+++ b/Galeria de Fotos/index.html
@@ -34,11 +34,11 @@
     <body>
         <div class="conteiner">
             <div class="texto">
-                <img class="galeria" src="Imagens/imagem1.png">
-                <img class="galeria" src="Imagens/imagem2.png">
-                <img class="galeria" src="Imagens/imagem3.png">
-                <img class="galeria" src="Imagens/imagem4.png">
-                <img class="galeria" src="Imagens/imagem5.png">
+                <img class="galeria" src="Imagens/imagem1.png">Resumo
+                <img class="galeria" src="Imagens/imagem2.png">Resumo
+                <img class="galeria" src="Imagens/imagem3.png">Resumo
+                <img class="galeria" src="Imagens/imagem4.png">Resumo
+                <img class="galeria" src="Imagens/imagem5.png">Resumo
                 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 <p>Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>   
             </div>          
