--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <tr>
             <td><a href="Galeria de Fotos">Trabalho</a> - Galeria de Fotos</td>
         </tr>
+        <tr>
+            <td><a href="09">Atividade 09</a> - Posicionamento</td>
+        </tr>
     </table>
 </body>
 </html>
