--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         <tr>
             <td><a href="09">Atividade 09</a> - Posicionamento</td>
         </tr>
+        <tr>
+            <td><a href="10">Atividade 10</a> - Introdução a CSS3</td>
+        </tr>
     </table>
 </body>
 </html>
