--- a/Desafio/index.html
+++ b/Desafio/index.html
@@ -5,6 +5,7 @@
         <style type="text/css">
             body{
                 background-color: black;
+                margin: 0px;
             }
             .header {
                 background-color: blueviolet;
