--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Pérola Pereira de Carvalho.</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body{
             background-image: url('fundo.jpg');
